--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.4.1'
 	implementation group: 'org.apache.tika', name: 'tika-parser-microsoft-module', version: '2.4.1'
+	testImplementation 'org.mockito:mockito-inline:3.12.4'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.projectlombok:lombok:1.18.22'
